--- a/Muc/app/src/main/res/layout/fragment_forum.xml
+++ b/Muc/app/src/main/res/layout/fragment_forum.xml
@@ -8,18 +8,23 @@
     <include layout="@layout/title"
         android:id="@+id/title"
         />
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:descendantFocusability="blocksDescendants"
         app:layout_constraintTop_toBottomOf="@id/title"
-        app:layout_constraintLeft_toLeftOf="parent">
+        >
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_forum"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="600dp"
             app:layout_constraintTop_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"/>
 
-    </LinearLayout>
+    </RelativeLayout>
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
