--- a/Muc/app/src/main/res/layout/fragment_found.xml
+++ b/Muc/app/src/main/res/layout/fragment_found.xml
@@ -67,7 +67,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_found"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="350dp"
         app:layout_constraintTop_toBottomOf="@id/recycler_category"
         app:layout_constraintLeft_toLeftOf="parent">
     </androidx.recyclerview.widget.RecyclerView>
