--- a/Muc/app/src/main/res/layout/fragment_forum.xml
+++ b/Muc/app/src/main/res/layout/fragment_forum.xml
@@ -14,14 +14,14 @@
         android:layout_weight="1"
         android:descendantFocusability="blocksDescendants"
         app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintBottom_toBottomOf="parent"
         >
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_forum"
             android:layout_width="match_parent"
-            android:layout_height="600dp"
-            app:layout_constraintTop_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"/>
+            android:layout_height="match_parent"
+            />
 
     </RelativeLayout>
 
