--- a/Muc/app/src/main/res/layout/fragment_found.xml
+++ b/Muc/app/src/main/res/layout/fragment_found.xml
@@ -69,6 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="350dp"
         app:layout_constraintTop_toBottomOf="@id/recycler_category"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
     </androidx.recyclerview.widget.RecyclerView>
 </androidx.constraintlayout.widget.ConstraintLayout>
