--- a/Muc/app/src/main/res/layout/fragment_home.xml
+++ b/Muc/app/src/main/res/layout/fragment_home.xml
@@ -11,15 +11,16 @@
     <TabHost
         android:id="@+id/tabhost"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title">
+        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
             android:orientation="vertical">
+
             <TabWidget
                 android:id="@android:id/tabs"
                 android:layout_width="match_parent"
@@ -27,6 +28,7 @@
                 android:background="@color/colorRed"
                 app:tabSelectedTextColor="@color/colorwhite"
                 ></TabWidget>
+
             <FrameLayout
                 android:id="@android:id/tabcontent"
                 android:layout_width="match_parent"
@@ -34,11 +36,13 @@
                 <LinearLayout
                     android:id="@+id/tab_music"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent">
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/recycler_view_music"
                             android:layout_width="match_parent"
-                            android:layout_height="550dp"/>
+                            android:layout_height="wrap_content"
+
+                            />
                 </LinearLayout>
 
                 <LinearLayout
@@ -48,18 +52,12 @@
                         <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recycler_view_musiclist"
                         android:layout_width="match_parent"
-                        android:layout_height="550dp"/>
+                        android:layout_height="match_parent"/>
                 </LinearLayout>
             </FrameLayout>
         </LinearLayout>
     </TabHost>
 
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:id="@+id/recycler_view"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/title" />-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
