--- a/Muc/app/src/main/res/layout/title.xml
+++ b/Muc/app/src/main/res/layout/title.xml
@@ -17,14 +17,16 @@
 
   <SearchView
       android:id="@+id/title_sousuo"
-      android:layout_width="260dp"
+      android:layout_width="0dp"
       android:layout_height="30dp"
       android:layout_marginLeft="20dp"
       android:layout_marginTop="5dp"
+      android:layout_marginRight="20dp"
       android:background="@drawable/searchview_shape"
       android:queryHint="请输入搜索内容"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintLeft_toRightOf="@id/title_yuyin">
+      app:layout_constraintLeft_toRightOf="@id/title_yuyin"
+      app:layout_constraintRight_toLeftOf="@id/title_bofang">
   </SearchView>
 
   <ImageView
@@ -32,8 +34,8 @@
       android:layout_width="40dp"
       android:layout_height="40dp"
       android:background="@drawable/bofang"
-      android:layout_marginLeft="30dp"
+      android:layout_marginRight="30dp"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintLeft_toRightOf="@id/title_sousuo"/>
+      app:layout_constraintRight_toRightOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
