--- a/Muc/app/src/main/res/values/colors.xml
+++ b/Muc/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
-    <color name="colorRed">#E51C23</color>
+    <color name="colorRed">#FF0000</color>
     <color name="colorwhite">#FFFFFF</color>
     <color name="colorgreen">#009688</color>
     <color name="colorgray">#DAD2D2</color>
