--- a/Muc/app/src/main/res/layout/activity_sign.xml
+++ b/Muc/app/src/main/res/layout/activity_sign.xml
@@ -36,6 +36,7 @@
             android:paddingTop="20dp"
             android:paddingBottom="20dp">
             <EditText
+                android:id="@+id/SignInId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -55,6 +56,7 @@
                 android:layout_marginBottom="5dp"
                 android:background="#83738F"></View>
             <EditText
+                android:id="@+id/SignInPwd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -75,6 +77,7 @@
                 android:background="#83738F"></View>
 
             <EditText
+                android:id="@+id/SignInPwdAgain"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -95,6 +98,7 @@
                 android:background="#83738F"></View>
 
             <EditText
+                android:id="@+id/SignInNickname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -115,6 +119,7 @@
                 android:background="#83738F"></View>
 
             <EditText
+                android:id="@+id/SignInPlace"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
