--- a/Muc/app/src/main/res/layout/title.xml
+++ b/Muc/app/src/main/res/layout/title.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="?attr/actionBarSize"
     android:background="@color/colorRed">
 
   <ImageView
@@ -12,6 +12,7 @@
       android:layout_height="40dp"
       android:background="@drawable/yuyin"
       android:layout_marginLeft="10dp"
+      android:layout_marginTop="10dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"/>
 
@@ -24,7 +25,7 @@
       android:layout_marginRight="20dp"
       android:background="@drawable/searchview_shape"
       android:queryHint="请输入搜索内容"
-      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintTop_toTopOf="@id/title_yuyin"
       app:layout_constraintLeft_toRightOf="@id/title_yuyin"
       app:layout_constraintRight_toLeftOf="@id/title_bofang">
   </SearchView>
@@ -34,8 +35,8 @@
       android:layout_width="40dp"
       android:layout_height="40dp"
       android:background="@drawable/bofang"
-      android:layout_marginRight="30dp"
-      app:layout_constraintTop_toTopOf="parent"
+      android:layout_marginRight="20dp"
+      app:layout_constraintTop_toTopOf="@id/title_yuyin"
       app:layout_constraintRight_toRightOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
