--- a/Muc/app/src/main/res/layout/title_listplay.xml
+++ b/Muc/app/src/main/res/layout/title_listplay.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="?attr/actionBarSize"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorRed">
 
@@ -11,6 +11,7 @@
         android:layout_height="40dp"
         android:background="@drawable/ic_back"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
@@ -20,6 +21,7 @@
         android:layout_gravity="center"
         android:layout_weight="5"
         android:gravity="center"
+        app:layout_constraintTop_toTopOf="@id/title_back"
         app:layout_constraintLeft_toRightOf="@id/title_back"
         app:layout_constraintRight_toLeftOf="@id/title_style">
 
@@ -41,6 +43,6 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginRight="30dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/title_back"
         app:layout_constraintRight_toRightOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
