--- a/Muc/app/src/main/res/layout/fragment_account.xml
+++ b/Muc/app/src/main/res/layout/fragment_account.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:id="@+id/toolbar_fragment_personal"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="?attr/actionBarSize"
         android:background="@color/colorRed"
         android:gravity="center"
         app:layout_constraintLeft_toLeftOf="parent"
