--- a/Muc/app/src/main/res/layout/activity_sign.xml
+++ b/Muc/app/src/main/res/layout/activity_sign.xml
@@ -30,7 +30,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="269dp"
+            android:layout_height="260dp"
             android:background="#99000000"
             android:orientation="vertical"
             android:paddingTop="20dp"
@@ -119,16 +119,24 @@
                 android:background="#83738F"></View>
 
             <EditText
-                android:id="@+id/SignInPlace"
+                android:id="@+id/SignIniograph"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
                 android:background="@null"
-                android:hint="your place"
+                android:hint="your iograph"
                 android:textColor="#9F9FA0"
                 android:textColorHint="#9F9FA0" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dip"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginBottom="5dp"
+                android:background="#83738F"></View>
         </LinearLayout>
 
         <LinearLayout
