--- a/Muc/app/src/main/res/layout/fragment_music.xml
+++ b/Muc/app/src/main/res/layout/fragment_music.xml
@@ -35,7 +35,7 @@
         android:layout_marginRight="10dp"
         android:layout_gravity="center_vertical"
         android:gravity="center"
-        android:background="@drawable/youcecaidan"
+        android:background="@drawable/tianjia"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/list_item_name1"/>
 
