--- a/Muc/app/src/main/res/layout/item_list.xml
+++ b/Muc/app/src/main/res/layout/item_list.xml
@@ -62,7 +62,7 @@
         android:layout_marginRight="10dp"
         android:layout_gravity="center_vertical"
         android:gravity="center"
-        android:background="@drawable/youcecaidan"
+        android:background="@drawable/shanchu"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@id/list_by"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
