--- a/Muc/app/src/main/res/layout/activity_login.xml
+++ b/Muc/app/src/main/res/layout/activity_login.xml
@@ -62,6 +62,7 @@
                 android:textColor="#9F9FA0"
                 android:textColorHint="#9F9FA0"
                 android:layout_marginLeft="50dp"
+                android:inputType="textPassword"
                 android:layout_marginRight="50dp"/>
         </LinearLayout>
         <LinearLayout
