--- a/Muc/app/src/main/res/layout/activity_sign.xml
+++ b/Muc/app/src/main/res/layout/activity_sign.xml
@@ -30,7 +30,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="260dp"
+            android:layout_height="269dp"
             android:background="#99000000"
             android:orientation="vertical"
             android:paddingTop="20dp"
@@ -64,6 +64,7 @@
                 android:layout_marginRight="50dp"
                 android:background="@null"
                 android:hint="your password"
+                android:inputType="textPassword"
                 android:textColor="#9F9FA0"
                 android:textColorHint="#9F9FA0"/>
 
@@ -85,6 +86,7 @@
                 android:layout_marginRight="50dp"
                 android:background="@null"
                 android:hint="password again"
+                android:inputType="textPassword"
                 android:textColor="#9F9FA0"
                 android:textColorHint="#9F9FA0" />
 
