--- a/Muc/app/src/main/res/layout/fragment_account.xml
+++ b/Muc/app/src/main/res/layout/fragment_account.xml
@@ -64,12 +64,13 @@
 
             <TextView
                 android:id="@+id/user_iograph"
-                android:layout_width="150dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="left"
                 android:layout_marginLeft="220dp"
                 android:layout_marginTop="80dp"
                 android:gravity="center"
-                android:textSize="15sp"
+                android:textSize="12dp"
                 />
 <!--            android:text="lv3"-->
         </RelativeLayout>
