--- a/Muc/app/src/main/res/layout/item_music.xml
+++ b/Muc/app/src/main/res/layout/item_music.xml
@@ -8,13 +8,14 @@
     <ImageView
         android:id="@+id/music_image"
         android:layout_width="0dp"
+        android:adjustViewBounds="true"
         android:layout_height="360dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="16dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:scaleType="centerCrop"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
