--- a/Muc/app/src/main/res/values/styles.xml
+++ b/Muc/app/src/main/res/values/styles.xml
@@ -30,4 +30,13 @@
         <item name="android:minHeight">36dp</item>
         <item name="android:maxHeight">36dp</item>
     </style>
+    <style name="myratingbar2"
+        parent="@android:style/Widget.RatingBar">
+        <item
+            name="android:progressDrawable">
+            @drawable/myratingbar2
+        </item>
+        <item name="android:minHeight">20dp</item>
+        <item name="android:maxHeight">20dp</item>
+    </style>
 </resources>
