--- a/Muc/app/src/main/res/layout/item_comment.xml
+++ b/Muc/app/src/main/res/layout/item_comment.xml
@@ -23,11 +23,23 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:scaleType="fitCenter"
+        android:layout_marginLeft="10dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintRight_toLeftOf="parent" />
-
+        app:layout_constraintRight_toLeftOf="parent"
+        />
+    <RatingBar
+        android:id="@+id/forum_ratingbar"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:numStars="5"
+        android:stepSize="1.0"
+        android:isIndicator="true"
+        android:progressTint="@color/colorgreen"
+        style="@style/Widget.AppCompat.RatingBar.Small"
+        app:layout_constraintBottom_toTopOf="@id/comment_from"
+        app:layout_constraintRight_toRightOf="parent"
+        />
     <TextView
         android:id="@+id/comment_details"
         android:layout_width="match_parent"
