--- a/Muc/app/src/main/res/layout/activity_search.xml
+++ b/Muc/app/src/main/res/layout/activity_search.xml
@@ -7,30 +7,26 @@
 
     <com.google.android.material.appbar.AppBarLayout
 
-    android:id="@+id/app_bar_tag"
-    android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintEnd_toEndOf="parent">
+        android:id="@+id/app_bar_serach"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/tool_bar_tag"
+        android:id="@+id/tool_bar_serach"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorRed"
         app:navigationIcon="@drawable/ic_back"
-        app:title="分类详情"
+        app:title="搜索结果"
         app:titleTextColor="@color/colorwhite" />
     </com.google.android.material.appbar.AppBarLayout>
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_caregorydetails"
+        android:id="@+id/recycler_serach"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/colorwhite"
-        app:layout_constraintTop_toBottomOf="@id/app_bar_tag"
+        app:layout_constraintTop_toBottomOf="@id/app_bar_serach"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
