--- a/Muc/app/src/main/res/layout/item_comment.xml
+++ b/Muc/app/src/main/res/layout/item_comment.xml
@@ -59,7 +59,16 @@
         android:background="@drawable/dianzan"
         app:layout_constraintTop_toBottomOf="@id/comment_details"
         app:layout_constraintLeft_toLeftOf="parent"/>
-
+    <TextView
+        android:id="@+id/comment_num"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1000"
+        android:textSize="20dp"
+        android:layout_marginLeft="10dp"
+        app:layout_constraintTop_toBottomOf="@id/comment_dianzan"
+        app:layout_constraintBottom_toTopOf="@id/comment_dianzan"
+        app:layout_constraintLeft_toRightOf="@id/comment_dianzan"/>
     <TextView
         android:id="@+id/comment_from"
         android:layout_width="wrap_content"
