--- a/Muc/app/src/main/res/layout/fragment_account.xml
+++ b/Muc/app/src/main/res/layout/fragment_account.xml
@@ -105,7 +105,7 @@
 
                 <Button
                     android:id="@+id/shezhi"
-                    android:text="设置"
+                    android:text="设置密码"
                     android:textSize="20dp"
                     android:textColor="#000000"
                     android:layout_weight="1"
